Address review notes.